[package]
name = "site-data"
version = "0.1.0"
authors = ["MikuroXina <ryosukadnak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
readonly = "0.2.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_yaml = "0.8.14"
